test/unique/neg/assign-unique-val.check
assign-unique-val.scala:15: error: unique value expected
  val s: Message @unique = O.msg
                             ^
one error found
